--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "img-switcher",
   "version": "1.0.1",
   "description": "Switch images after JS is loaded to target resolution by breakpoints. Available in VanillaJS or TypeScript.",
-  "main": "index.js",
+  "main": "/public/imgSwitcher.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
